<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Act_PaidVersion">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"/>

    <ImageView
        android:id="@+id/ivv"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/group_1502"/>

    <TextView
        android:id="@+id/headinga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivv"
        android:layout_centerInParent="true"
        android:layout_marginVertical="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="Navigate Your Dream World"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:layout_below="@+id/headinga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/content1"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="@dimen/_5sdp">

            <TextView
                android:id="@+id/pro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/pro_version"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_12ssp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp">

            <TextView
                android:id="@+id/ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/ads"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_12ssp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/privacy"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_10ssp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=" &amp; "
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
            <TextView
                android:id="@+id/tos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/tos"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>