<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:cardBackgroundColor="@color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_25sdp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/pro"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:text="@string/ad_free"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/_14ssp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_30sdp"
                        android:text="@string/content2"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/_11ssp" />
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:layout_marginHorizontal="@dimen/_40sdp"
                        app:cardBackgroundColor="@color/yellow"
                        app:cardCornerRadius="@dimen/_5sdp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:paddingVertical="@dimen/_4sdp"
                            android:text="@string/_100_month"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/_14ssp" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/privacy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text="@string/privacy"
                            android:textColor="@color/violet"
                            android:textSize="@dimen/_10ssp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text=" &amp; "
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <TextView
                            android:id="@+id/tos"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins"
                            android:gravity="center"
                            android:text="@string/tos"
                            android:textColor="@color/violet"
                            android:textSize="@dimen/_10ssp" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/cross" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cross_ad"/>
</RelativeLayout>