<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_Intro">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:id="@+id/header"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/menu"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/group_198"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_50sdp"
            android:text="DREAM REVEALER"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:text="@string/skip"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_11ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <ImageView
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:id="@+id/iv1"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/sleep"/>

        <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_below="@+id/iv1"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_10sdp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/pro"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:text="Chase Your Dreams"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/_16ssp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:paddingHorizontal="@dimen/_18sdp"
                            android:text="@string/content3"
                            android:gravity="center_horizontal"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/_11ssp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <ImageView
                            android:id="@+id/iv_dot1"
                            android:layout_width="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:layout_height="@dimen/_8sdp"
                            android:src="@drawable/selected"/>

                        <ImageView
                            android:id="@+id/iv_dot3"
                            android:layout_width="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:layout_height="@dimen/_8sdp"
                            app:tint="#8391A4"
                            android:src="@drawable/selected"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:layout_alignParentEnd="true"
                        android:text="@string/next"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/_11ssp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:layout_below="@+id/iv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lay2">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_below="@+id/iv1"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_10sdp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:layout_marginHorizontal="@dimen/_40sdp"
                            android:text="Allow Your Dreams To See Your Wings"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/_16ssp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:paddingHorizontal="@dimen/_18sdp"
                            android:text="@string/content4"
                            android:gravity="center_horizontal"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/_11ssp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:layout_height="@dimen/_8sdp"
                            app:tint="#8391A4"
                            android:src="@drawable/selected"/>

                        <ImageView
                            android:layout_width="@dimen/_8sdp"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            android:layout_height="@dimen/_8sdp"
                            android:src="@drawable/selected"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/prev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:text="@string/prev"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/_11ssp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/ok"
                        android:layout_width="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/yellow">
                        <TextView
                            android:layout_width="wrap_content"
                            android:paddingVertical="@dimen/_4sdp"
                            android:paddingHorizontal="@dimen/_15sdp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_10ssp"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/dark_blue"
                            android:text="OK"/>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </RelativeLayout>



    <include layout="@layout/activity_act_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/lay3"/>
</RelativeLayout>